--- a/markt/bower.json
+++ b/markt/bower.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "foundation-sites": "~6.0.0",
     "motion-ui": "~1.1.0",
-    "firebase": "~2.3.2"
+    "firebase": "~2.3.2",
+    "gulp": "~3.9.0",
+    "foundation-icon-fonts": "*"
   },
   "ignore": [
     "**/.*",
